updating index h1 text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>Cincy Capstones</h1>
 </header>
 <div class="w3-center">
-  <h2>Future home of Interesting Code Projects</h2>
+  <h2>Future Home of Interesting Capstones</h2>
   <p>C#, MSSQL and Vue.JS</p>
 </div>  
 
